--- a/src/styles/EditorLayout.css
+++ b/src/styles/EditorLayout.css
@@ -3,6 +3,8 @@
   height: 100%;
   width: 100%;
   max-width: 100vw;
+  min-width: 0;
+  min-height: 0;
   overflow: hidden;
 }
 
@@ -10,6 +12,8 @@
   display: flex;
   flex: 1;
   min-width: 0;
+  min-height: 0;
+  overflow: hidden;
 }
 
 .file-explorer-resizable {
@@ -114,7 +118,9 @@
   flex: 0 0 auto;
   flex-shrink: 0;
   min-width: 0;
+  min-height: 0;
   overflow: hidden;
   position: relative;
+  align-self: stretch;
   z-index: 2;
 }
